# crack

./: .contextignore  .cursorrules  .gitignore  .mcp.json  9b26a68ebab42af4-trunk-init.js  AGENTS.md  Automating Model Group Definitions.md  CLAUDE.md  Cargo.toml  Makefile  bugs.txt  bugs2.txt  build_worker.sh  deploy.sh  download_data.sh  gen-context.config.json  gratar-c38e38d59559a81b.js  index.html  post.db  post2.db  print_anims.py  pwa_sw.js  random_bullshit_go.docx  readme.md  sigmap.sh  start_builder.sh  start_docker.sh  start_game_native.sh  start_game_web.sh  start_gratar.sh  start_pedestrian.sh  start_pedestrian_v2.sh  start_test.sh  start_web.sh  style.css
.pi/crack/server/: .venv  AGENTS.md  README.md  pyproject.toml
.pi/crack/server/.playwright-mcp/: page-2026-07-18T17-14-50-921Z.yml  page-2026-07-18T17-16-24-647Z.yml
.pi/crack/server/_slop/: report-1-compaction.md
.pi/crack/server/prompt_templates/: title.md
.pi/crack/server/prompt_templates/explore/: explore.md  gate.md
.pi/crack/server/prompt_templates/finished/: chat.md
.pi/crack/server/prompt_templates/impl_review/: review.md
.pi/crack/server/prompt_templates/implementation/: handoff.md
.pi/crack/server/prompt_templates/plan/: draft.md  draft_followup.md  final_plan.md  write_plan.md
.pi/crack/server/prompt_templates/plan_review/: critique.md  grill_followup.md  reject.md  revise.md  todo.md
.pi/crack/server/src/crack_server/: app.py  attachments.py  chat_engine.py  chats.py  compaction.py  context_guard.py  context_stats.py  git_utils.py  graphiti.py  images.py  main.py  model_latency.py  models.py  patch.py  paths.py  pi_proc.py  pi_rpc.py  pi_runner.py  prewalk.py  questions.py  queue.py  rag.py  rag_inject.py  ratelimit.py  render.py  routes_chats.py  routes_graph.py  routes_rag.py  routes_settings.py  routes_stages.py  routes_sub_agents.py  routes_tasks.py  routes_vision.py  sandbox.py  sandbox.py.rej  settings.py  state.py  steprun.py  titles.py  trajectory_view.py  (+4 more)
.pi/crack/server/tests/: fake_pi.sh  fake_pi_rpc.py  test_ask_user.py  test_async_worker.py  test_b13_stderr_tail.py  test_compaction.py  test_context_guard.py  test_crash_retry.py  test_detached_hops.py  test_error_rows.py  test_graph_routes.py  test_merge_apply.py  test_model_latency.py  test_model_switch.py  test_patch.py  test_pi_rpc.py  test_plan41.py  test_plan_revamp.py  test_rag.py  test_rag_inject.py  test_rag_routes.py  test_render_ui.py  test_sandbox.py  test_stage_lifecycle.py  test_state.py  test_stop_durable.py  test_sub_agents.py  test_traj_notes.py  test_trajectory_view.py  test_vision_media.py  test_wait_join.py
crack_demo/demo_resolution_selector_web_bevy/: AGENTS.md  Cargo.toml  Trunk.toml  index.clouds.html  index.fane.html  index.gratar.html  index.html  post3.db
crack_demo/demo_resolution_selector_web_bevy/public/: trunk-init.js
crack_demo/demo_resolution_selector_web_bevy/public/scripts/v2/: crack2-client.js  crack2-dedicated-worker.js  crack2-shared-worker.js
crack_demo/demo_resolution_selector_web_bevy/public/sound_data/: Chopin_Minute_waltz.json
crack_demo/demo_resolution_selector_web_bevy/src/: basic_app.rs  config.rs  egui_theme.rs  lib.rs  main.rs  main_bevy.rs  main_game_plugin.rs  ui_egui.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/: camera_controls.rs  debug_picker.rs  geojson.rs  main_scene_plugin.rs  mod.rs  notifications.rs  physics_plugin.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/audio/: audio_fx.rs  mod.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/cars_driving/: car_info.rs  click_spawn_select_controls.rs  driving_plugin.rs  mod.rs  spawn_random_cars.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/cloud_sky/: ground_shadow.wgsl  materials.rs  mod.rs  precip_overlay.wgsl  settings.rs  skybox_clouds.wgsl  systems.rs  ui.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/crack_plugin/: lod_flow.rs  manifest_flow.rs  mod.rs  osm_flow.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/game_freecam/: camera_controls.rs  mod.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/gta_plugin/: camera.rs  car.rs  teleport.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/map_plugin/: bvh_minimap.rs  fake_map.rs  map_lod.rs  map_lod_old.rs  map_material_edit.rs  map_metadata_parquet.rs  map_plugin_ui.rs  mod.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/mission_plugin/: config.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/network/: global_chat_ui.rs  mod.rs  multiplayer_plugin.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/pedestrian_ai/: anim_ai.rs  brain.rs  combat.rs  debug_ui.rs  faction.rs  mod.rs  movement_ai.rs  perception.rs  spawn_ai.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/pedestrians/: animation.rs  draw_skel_debug.rs  manifest.rs  mod.rs  ragdoll.rs  skeleton.rs  spawn_pedestrian.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/states/: mod.rs
crack_demo/demo_resolution_selector_web_bevy/src/plugins/traffic/: common.rs  consts.rs  debug_ui.rs  despawn.rs  (+5 more)
crack_demo/demo_resolution_selector_web_bevy/src/utils/: create_texture.rs  mod.rs  setup_debug_scene.rs
crack_demo/thread_worker/: AGENTS.md  Cargo.toml
crack_demo/thread_worker/src/: lib.rs  main.rs
crack_demo/web_worker/: AGENTS.md  Cargo.toml
crack_demo/web_worker/src/: lib.rs
(+1781 files in other folders)
