[package]
name = "demo_resolution_selector_web_bevy"
version = "0.1.0"
authors = ["johnny-smitherson <127537716+johnny-smitherson@users.noreply.github.com>"]
edition = "2024"

[dependencies]
bevy = "0.15.2"
bevy_egui = "0.33.0"
# bevy_atmosphere = "0.12.2"
# bevy_hanabi = { version = "0.14", default-features = false, features = [ "3d", "serde" ] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
# web-sys = { version = "0.3.77", optional = true, features = ["Window", "Document", "Element", "HtmlCanvasElement", "CssStyleDeclaration", "HtmlDivElement"] }


[dependencies.web-sys]
optional = true
version = "0.3.77"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "HtmlDivElement",
]

[features]
default = []
web = ["dep:web-sys"]


