[package]
name = "thread_worker"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
crack = {path="../../", features=["native_thread_worker"]}
game_logic = { path = "../game_logic", features = ["worker"] }
iroh = { version = "0.34.0", default-features = false }
rand = "0.8"
n0-future = "0.1.2"
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
