[package]
name = "web_worker"
version.workspace = true
authors.workspace = true
edition.workspace = true



[lib]
crate-type = ["cdylib"]


[dependencies]
crack = {path="../../", features=["web_serviceworker_worker"]}
game_logic = { path = "../game_logic", features = ["worker"] }

[lints]
workspace = true
