[project]
name = "crack-pi-server"
version = "0.1.0"
description = "Web UI for .pi/crack/tasks/<task_id> prompt markdown files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "markdown-it-py>=4.2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.32.0",
    "watchfiles>=0.24.0",
]

[project.scripts]
crack-server = "crack_server.main:main"
crack-worker = "crack_server.worker:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crack_server"]

[tool.hatch.build.targets.wheel.sources]
"src/crack_server" = "crack_server"
